# code-fuzzy-match

./: Cargo.toml  README.md
benches/: benchmark.rs
examples/: fuzz.rs
src/: lib.rs
