[package]
name = "code-fuzzy-match"
license = "MIT"
version = "0.2.1"
edition = "2021"
description = "Fuzzy string matching inspired by Visual Studio Code"
repository = "https://github.com/D0ntPanic/code-fuzzy-match"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5" }
rand = { version = "0.8" }

[[bench]]
name = "benchmark"
harness = false
